--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Image Maps</title>
     <link rel="stylesheet" href="css/styles.css" />
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
 </head>
 <body>
     <div class="ba-slider">
@@ -36,8 +36,13 @@
                 <area id="DockerMongo" alt="DockerMongo" title="DockerMongo" shape="poly" coords="594,226,584,252,575,266,545,277,545,297,608,296,614,273,637,265,639,235,638,227" style="outline:none;" target="_self" onclick="clickMap(this)" />
             </map>
         </div>
-        <span class="handle"></span>
-    </div>    
+        <span class="handle">
+            <span class="handle-button">
+                <span class="handle-left-arrow"></span>
+                <span class="handle-right-arrow"> </span>
+            </span>
+        </span>
+    </div>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
 
@@ -58,7 +63,7 @@
             });
         });
 
-        // Update sliders on resize. 
+        // Update sliders on resize.
         // Because we all do this: i.imgur.com/YkbaV.gif
         $(window).resize(function () {
             $('.ba-slider').each(function () {
@@ -77,7 +82,7 @@
                 resizeElement.addClass('resizable');
 
                 // Check if it's a mouse or touch event and pass along the correct value
-                var startX = (e.pageX) ? e.pageX : e.originalEvent.touches[0].pageX;
+                var startX = (e.pageX) ? e.pageX : (e.originalEvent.touches ? e.originalEvent.touches[0].pageX : 0);
 
                 // Get the initial position
                 var dragWidth = dragElement.outerWidth(),
@@ -107,7 +112,7 @@
                     // Translate the handle's left value to masked divs width.
                     widthValue = (leftValue + dragWidth / 2 - containerOffset) * 100 / containerWidth + '%';
 
-                    // Set the new values for the slider and the handle. 
+                    // Set the new values for the slider and the handle.
                     // Bind mouseup events to stop dragging.
                     $('.draggable').css('left', widthValue).on('mouseup touchend touchcancel', function () {
                         $(this).removeClass('draggable');
